# Hermes-stackchan

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  SETUP.md
examples/: hermes-config.snippet.yaml  task_status.sample.json  token_usage.sample.json
stackchan_hermes/: __init__.py  app.py  cli.py  client.py  registry.py  sources.py
stackchan_hermes/apps/: __init__.py  task_status.py  token_usage.py
